# research-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
eval/: queries.jsonl  run_eval.py
eval/results/20260511_201421/: summary.json  traces.jsonl
eval/results/20260511_201709/: summary.json  traces.jsonl
eval/results/20260511_201808/: summary.json  traces.jsonl
src/research_agent/: __init__.py  agent.py  cli.py  llm.py  tracing.py
src/research_agent/tools/: __init__.py  calculator.py  code_exec.py  search.py
tests/: conftest.py  test_agent.py  test_calculator.py  test_code_exec.py
viz/: make_plots.py
