[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research_agent"
version = "0.1.0"
description = "Multi-tool LLM agent based research assistant"
requires-python = ">=3.10"
authors = [{ name = "Nilay Sundarkar" }]
dependencies = [
    "anthropic>=0.39.0",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.1",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
research-agent = "research_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
